picopio_emu.h

////////////////////////////
// emulator API
////////////////////////////
extern void pio_init(bool out_gpio_bit_by_bit, bool in_gpio_bit_by_bit, bool disp_asm_stdout, bool distp_trace_stdout);
extern void pio_code_start(
	char	*funcname, 
	int		sm_id,					// state machine ID (for IRQ rel)

	int		in_pins, 
	int		in_num, 
	int		out_pins, 
	int		out_num, 
	int		sideset_pins, 
	int		sideset_num, 
	bool	sideset_opt, 

	bool	isr_shift_right, 		// SHIFTCTRL_IN_SHITDIR
	bool	isr_autopush,
	int		isr_autopush_threshold,	// SHIFTCTRL_PUSH_THRESH
	bool	osr_shift_right, 		// SHIFTCTRL_OUT_SHIFTDIR
	bool	osr_autopull,
	int		osr_autopull_threshold,	// SHIFTCTRL_PULL_THRESH
	int		jmp_pin,				// EXECCTRL_JMP_PIN
	bool	mov_status_sel,			// EXECCTRL_STATUS_SEL
	int		mov_status_val			// EXECCTRL_STATUS_SEL
);
extern void pio_code_start_simple(
	char	*funcname, 
	int		sm_id,					// state machine ID (will be used for IRQ rel)

	int		in_pins, 
	int		in_num, 
	int		out_pins, 
	int		out_num, 
	int		sideset_pins, 
	int		sideset_num, 
	bool	sideset_opt
);
extern void pio_code_end(bool write_code, char *file_name_code);
extern void pio_run_emulation(int cycles, char *file_name_in, char *file_name_out);
////////////////////////////
// instructions
////////////////////////////
extern void pio_jmp(int cond, char *lbl, int sideset, int delay);
extern void pio_wait(bool polarity, int src, int index, bool rel, int sideset, int delay);
extern void pio_in(int src, int bitcount, int sideset, int delay);
extern void pio_out(int dest, int bitcount, int sideset, int delay);
extern void pio_push(bool iffull, bool block, int sideset, int delay);
extern void pio_pull(bool ifempty, bool block, int sideset, int delay);
extern void pio_mov(int dest, int op, int src, int sideset, int delay);
extern void pio_irq(bool clr, bool wait, int index, bool rel, int sideset, int delay);
extern void pio_set(int dest, int data, int sideset, int delay);
// (pseudo instructions)
extern void pio_comment(char *string);		// max len = MAX_COMMENT_LEN
extern void pio_label(char *lbl);
extern void pio_nop(int sideset, int delay);
extern void pio_wrap_target(void);
extern void pio_wrap(void);
extern void pio_origin(int addr);
/////////////////////////////////////////////////////////////////////////////////////////
// type definitions & global variables
/////////////////////////////////////////////////////////////////////////////////////////

typedef struct _pio_inst_list {
	bool		used;
	int			code_line;
	uint8_t		addr;			// 0-31

	int			inst_type;
	int			operand1;
	int			operand2;
	int			operand3;
	int			operand4;
	int			operand5;
	int			sideset;
	int			delay;

	char		strbuf[PIO_MAX_ASMLINE_LEN + 1];	// label or comment
	char		asmbuf[PIO_MAX_ASMLINE_LEN + 1];	// assembler output
} _PIO_INST;
typedef struct _pio_csvin_info {
	int			cycles;
	uint32_t	gpio_i;
	uint8_t		irq_i;
	bool		txfifo_push;
	uint32_t	txfifo_val;
	bool		rxfifo_pop;
} _PIO_CSVIN;
void pio_code_start(
	const char	*funcname, 
	int		sm_id,					// state machine ID (will be used for IRQ rel)

	int		in_pins, 
	int		in_num, 
	int		out_pins, 
	int		out_num, 
	int		sideset_pins, 
	int		sideset_num, 
	bool	sideset_opt, 

	bool	isr_shift_right, 		// SHIFTCTRL_IN_SHITDIR
	bool	isr_autopush,
	int		isr_autopush_threshold,	// SHIFTCTRL_PUSH_THRESH
	bool	osr_shift_right, 		// SHIFTCTRL_OUT_SHIFTDIR
	bool	osr_autopull,
	int		osr_autopull_threshold,	// SHIFTCTRL_PULL_THRESH
	int		jmp_pin,				// EXECCTRL_JMP_PIN
	bool	mov_status_sel,			// EXECCTRL_STATUS_SEL
	int		mov_status_val			// EXECCTRL_STATUS_SEL
)
{
	int	i;
	int delay_bitnum;

	if (_pio_emu_state_g != PIO_SIMSTATE_CODE_START) {
		fprintf(stderr, "pio_code_start(): ERROR. Illegal code-start position.\n");
		exit(1);
	}
	_pio_emu_state_g	= PIO_SIMSTATE_CODE_END;

	// initialize global info
	strcpy_s(_pio_info_g.func_name, funcname);			// NOTE: init value

	// state machine ID (for IRQ rel)
	if (sm_id < 0 || sm_id > 3) {
		fprintf(stderr, "pio_code_start(): ERROR. Illegal state machine id (0-3).\n");
		exit(1);
	}
	_pio_info_g.sm_id	= sm_id;

	// init internal info
	for (i = 0; i < PIO_MAX_ASMLINE_NUM; i++) {
		_PIO_INST	*p;
		p						= &(_pio_info_g.asmline[i]);
		p->used					= false;
		p->code_line			= 0;
		p->addr					= 0;
		p->inst_type			= PIO_UNUSE;
		p->operand1				= PIO_UNUSE;
		p->operand2				= PIO_UNUSE;
		p->operand3				= PIO_UNUSE;
		p->operand4				= PIO_UNUSE;
		p->operand5				= PIO_UNUSE;
		p->sideset				= PIO_UNUSE;
		p->delay				= PIO_UNUSE;
		(p->strbuf)[0]			= '\0';
		(p->asmbuf)[0]			= '\0';
	}
	_pio_info_g.asmline_ptr		= 0;

	_pio_info_g.origin			= PIO_UNUSE;
	_pio_info_g.inst_ptr		= 0;

	_pio_info_g.delay_timer		= PIO_UNUSE;
	_pio_info_g.x				= 0;
	_pio_info_g.y				= 0;

	_pio_info_g.isr				= 0;
	_pio_info_g.osr				= 0;

	for (i = 0; i < 4; i++) {
		(_pio_info_g.txfifo)[i]	= 0;
	}
	_pio_info_g.txfifo_num		= 0;
	for (i = 0; i < 4; i++) {
		(_pio_info_g.rxfifo)[i]	= 0;
	}
	_pio_info_g.rxfifo_num		= 0;

	_pio_info_g.in_pins			= in_pins;			// NOTE: init value
	_pio_info_g.in_num			= in_num;			// NOTE: init value
	_pio_info_g.out_pins		= out_pins;			// NOTE: init value
	_pio_info_g.out_num			= out_num;			// NOTE: init value
	_pio_info_g.sideset_pins	= sideset_pins;		// NOTE: init value
	_pio_info_g.sideset_num		= sideset_num;		// NOTE: init value
	_pio_info_g.sideset_opt		= sideset_opt;		// NOTE: init value

	{
		if (in_pins == PIO_UNUSE || in_num == PIO_UNUSE) {
			in_pins			= 0;
			in_num			= 0;
		}
		if (out_pins == PIO_UNUSE || out_num == PIO_UNUSE) {
			out_pins		= 0;
			out_num			= 0;
		}
		if (sideset_pins == PIO_UNUSE || sideset_num == PIO_UNUSE) {
			sideset_pins	= 0;
			sideset_num		= 0;
		}

		// check pin assign
		if (in_pins < 0 || in_num < 0 || (in_pins + in_num) > 29) {		// 29 ... GPIO 0-28
			fprintf(stderr, "pio_code_start(): ERROR. Illegal number of input pins.\n");
			exit(1);
		}
		if (out_pins < 0 || out_num < 0 || (out_pins + out_num) > 29) {
			fprintf(stderr, "pio_code_start(): ERROR. Illegal number of output pins.\n");
			exit(1);
		}
		if (sideset_pins < 0 || sideset_num < 0 || (sideset_pins + sideset_num) > 29) {
			fprintf(stderr, "pio_code_start(): ERROR. Illegal number of sideset pins.\n");
			exit(1);
		}

		_pio_info_g.in_pin_setmask		= (pio_maxval(in_num)      << in_pins)      & 0x1FFFFFFF;	// 0x1FFFFFFF ... GPIO28-0
		_pio_info_g.out_pin_setmask		= (pio_maxval(out_num)     << out_pins)     & 0x1FFFFFFF;
		_pio_info_g.sideset_pin_setmask	= (pio_maxval(sideset_num) << sideset_pins) & 0x1FFFFFFF;

		_pio_info_g.in_pin_clrmask		= 0xFFFFFFFF ^ _pio_info_g.in_pin_setmask;					// (inversion)
		_pio_info_g.out_pin_clrmask		= 0xFFFFFFFF ^ _pio_info_g.out_pin_setmask;
		_pio_info_g.sideset_pin_clrmask	= 0xFFFFFFFF ^ _pio_info_g.sideset_pin_setmask;

//fprintf(stderr, "in mask   %08x\n", _pio_info_g.in_pin_setmask);
//fprintf(stderr, "out mask  %08x\n", _pio_info_g.out_pin_setmask);
//fprintf(stderr, "side mask %08x\n", _pio_info_g.sideset_pin_setmask);

		if ((_pio_info_g.in_pin_setmask & _pio_info_g.out_pin_setmask) != 0) {
			fprintf(stderr, "pio_code_start(): ERROR. Pin assignment overlap between input and output.\n");
			exit(1);
		}
		if ((_pio_info_g.in_pin_setmask & _pio_info_g.sideset_pin_setmask) != 0) {
			fprintf(stderr, "pio_code_start(): ERROR. Pin assignment overlap between input and sideset.\n");
			exit(1);
		}
		if ((_pio_info_g.out_pin_setmask & _pio_info_g.sideset_pin_setmask) != 0) {
			fprintf(stderr, "pio_code_start(): ERROR. Pin assignment overlap between output and sideet.\n");
			exit(1);
		}
	}

	_pio_info_g.gpio_i			= 0;
	_pio_info_g.gpio_o			= 0;
	_pio_info_g.sideset_val		= 0;

	_pio_info_g.irq_i			= 0;
	_pio_info_g.irq_o			= 0;
	_pio_info_g.irq_stalling	= false;

	_pio_info_g.cycles			= 1;
	_pio_info_g.isr_shift_right	= isr_shift_right;	// NOTE: default value
	_pio_info_g.osr_shift_right	= osr_shift_right;	// NOTE: default value

	if (isr_autopush_threshold < 0 || isr_autopush_threshold > 32) {
		fprintf(stderr, "pio_code_start(): ERROR. Illegal isr_autopush_threshold value.\n");
		exit(1);
	}
	if (osr_autopull_threshold < 0 || osr_autopull_threshold > 32) {
		fprintf(stderr, "pio_code_start(): ERROR. Illegal osr_autopull_threshold value.\n");
		exit(1);
	}
	_pio_info_g.isr_autopush			= isr_autopush;
	_pio_info_g.isr_autopush_threshold	= isr_autopush_threshold;	// NOTE: default value
	_pio_info_g.osr_autopull			= osr_autopull;
	_pio_info_g.osr_autopull_threshold	= osr_autopull_threshold;	// NOTE: default value

	_pio_info_g.isr_bitctr		= 0;		// empty
	_pio_info_g.osr_bitctr		= _pio_info_g.osr_autopull_threshold;	// (empty)


	{	// check # of sideset num
		if (sideset_num > 5 || (sideset_opt == true && sideset_num > 4)) {
			fprintf(stderr, "pio_code_start(): ERROR. Too many number of sideset signals.\n");
			exit(1);
		}

		if (sideset_opt == false) {
			delay_bitnum	= 5 - sideset_num;
		}
		else {
			delay_bitnum	= 4 - sideset_num;
		}

		_pio_info_g.sideset_maxval	= pio_maxval(sideset_num);

		if (delay_bitnum >= 1)
			_pio_info_g.delay_maxval	= pio_maxval(delay_bitnum);
		else
			_pio_info_g.delay_maxval	= 0;
	}

	_pio_info_g.jmp_pin		= jmp_pin;
	if (jmp_pin != PIO_UNUSE) {	// check jmp pin
		if (jmp_pin < 0 || jmp_pin > 29) {
			fprintf(stderr, "pio_code_start(): ERROR. Illegal jmp_pin assignment.\n");
			exit(1);
		}

		_pio_info_g.jmp_pin_setmask	= ((uint32_t)1 << jmp_pin) & 0x1FFFFFFF;	// GPIO28-0

		if ((_pio_info_g.jmp_pin_setmask & _pio_info_g.out_pin_setmask) != 0) {
			fprintf(stderr, "pio_code_start(): ERROR. Jmp_pin is assigned to an output port.\n");
			exit(1);
		}
		if ((_pio_info_g.jmp_pin_setmask & _pio_info_g.sideset_pin_setmask) != 0) {
			fprintf(stderr, "pio_code_start(): ERROR. Jmp_pin is assigned to a sideset port.\n");
			exit(1);
		}
	}

	_pio_info_g.mov_status_sel		= mov_status_sel;	// true:TX, false:RX
	if (mov_status_val < 1 || mov_status_val > 4) {
		fprintf(stderr, "pio_code_start(): ERROR. Illegal mov_status_val (1-4).\n");
		exit(1);
	}
	_pio_info_g.mov_status_val		= mov_status_val;

	_pio_info_g.wrap_target_line	= PIO_UNUSE;
	_pio_info_g.wrap_line			= PIO_UNUSE;

	_pio_info_g.fin					= (FILE *)NULL;
	_pio_info_g.fout				= (FILE *)NULL;
	_pio_info_g.fcode				= (FILE *)NULL;

	_pio_info_g.csvin_cache[0]		= '\0';
	_pio_info_g.csvin_cache_valid	= false;
	{
		_PIO_CSVIN	*p;
		p				= &(_pio_info_g.csvin_info);
		p->cycles		= PIO_UNUSE;
		p->gpio_i		= 0;
		p->txfifo_push	= false;
		p->txfifo_val	= 0;
		p->rxfifo_pop	= false;
	}
}
void pio_code_start_simple(
	const char	*funcname, 
	int		sm_id,					// state machine ID (will be used for IRQ rel)
	int		in_pins, 
	int		in_num, 
	int		out_pins, 
	int		out_num, 
	int		sideset_pins, 
	int		sideset_num, 
	bool	sideset_opt
)
{
	pio_code_start(
		funcname, 
		sm_id,

		in_pins, 
		in_num, 
		out_pins, 
		out_num, 
		sideset_pins, 
		sideset_num, 
		sideset_opt, 

		false,			// bool	isr_shift_right, 		// SHIFTCTRL_IN_SHITDIR
		false,			// bool	isr_autopush,
		32,				// int	isr_autopush_threshold,	// SHIFTCTRL_PUSH_THRESH
		true,			// bool	osr_shift_right, 		// SHIFTCTRL_OUT_SHIFTDIR
		false,			// bool	osr_autopull,
		32,				// int	osr_autopull_threshold,	// SHIFTCTRL_PULL_THRESH
		PIO_UNUSE,		// int	jmp_pin,				// EXECCTRL_JMP_PIN
		true,			// bool	mov_status_sel,			// EXECCTRL_STATUS_SEL
		4				// int	mov_status_val			// EXECCTRL_STATUS_SEL
	);
}
void pio_code_end(bool write_code, const char *file_name_code)
{
	if (_pio_emu_state_g != PIO_SIMSTATE_CODE_END) {
		fprintf(stderr, "pio_code_end(): ERROR. Illegal code-end position.\n");
		exit(1);
	}
	_pio_emu_state_g	= PIO_SIMSTATE_RUN_START;

	pio_resolve_label_address();
	if (write_code == true) {
		pio_write_assembler_code(file_name_code);		// create output asm
	}
}
void pio_run_emulation(int cycles, const char *file_name_in, const char *file_name_out)
{
	int	ctr;

	if (_pio_emu_state_g != PIO_SIMSTATE_RUN_START) {
		fprintf(stderr, "pio_run_emulation(): ERROR. Illegal run-start position.\n");
		exit(1);
	}
	_pio_emu_state_g	= PIO_SIMSTATE_RUN_END;

	/////////////////////////////////////
	// init
	/////////////////////////////////////
	if (_pio_emu_state_g == false) {
		fprintf(stderr, "pio_run_emulation(): ERROR. No asm code is given for emulation.\n");
		exit(1);
	}
	if (file_name_in != (char *)NULL) {		// open input csv
		if (fopen_s(&(_pio_info_g.fin), file_name_in, "rt") != 0) {
			fprintf(stderr, "pio_run_emulation(): ERROR. Cannot open input CSV file \"%s\".\n", file_name_in);
			exit(1);
		}
	}
	if (file_name_out != (char *)NULL) {	// create output csv
		if (fopen_s(&(_pio_info_g.fout), file_name_out, "wt") != 0) {
			fprintf(stderr, "pio_run_emulation(): ERROR. Cannot create output CSV file \"%s\".\n", file_name_out);
//			if (_pio_info_g.fin != (FILE *)NULL) {
//				fclose(_pio_info_g.fin);
//			}
			exit(1);
		}
	}

	/////////////////////////////////////
	// main loop
	/////////////////////////////////////
	if (pio_check_existence_of_code() == false) {
		fprintf(stderr, "pio_run_emulation(): ERROR. No instruction exists in the main loop (wrap_target to wrap).\n");
		exit(1);
	}

//	fprintf(stderr, "\nstart emulation\n");

	pio_read_csv_input_header();
	pio_write_csv_output_header();
	for (ctr = 0; ctr < cycles; ctr++) {
		pio_exec_instruction();
	}

	/////////////////////////////////////
	// closing
	/////////////////////////////////////
	if (_pio_info_g.fin != (FILE *)NULL) {
		fclose(_pio_info_g.fin);
	}
	if (_pio_info_g.fout != (FILE *)NULL) {
		fclose(_pio_info_g.fout);
	}

	_pio_emu_state_g	= false;
}
void pio_jmp(int cond, char *lbl, int sideset, int delay)
{
	pio_register_instruction(PIO_INST_JMP, cond, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, sideset, delay, lbl);
}
void pio_wait(bool polarity, int src, int index, bool rel, int sideset, int delay)
{
	int	polarity_i	= (polarity == true)	? 1 : 0;
	int	rel_i		= (rel == true)			? 1 : 0;
	pio_register_instruction(PIO_INST_WAIT, polarity_i, src, index, rel_i, PIO_UNUSE, sideset, delay, (char *)NULL);
}
void pio_in(int src, int bitcount, int sideset, int delay)
{
	pio_register_instruction(PIO_INST_IN, src, bitcount, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, sideset, delay, (char *)NULL);
}
void pio_out(int dest, int bitcount, int sideset, int delay)
{
	pio_register_instruction(PIO_INST_OUT, dest, bitcount, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, sideset, delay, (char *)NULL);
}
void pio_push(bool iffull, bool block, int sideset, int delay)
{
	int	iffull_i	= (iffull == true)	? 1 : 0;
	int	block_i		= (block == true)	? 1 : 0;
	pio_register_instruction(PIO_INST_PUSH, iffull_i, block_i, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, sideset, delay, (char *)NULL);
}
void pio_pull(bool ifempty, bool block, int sideset, int delay)
{
	int	ifempty_i	= (ifempty == true)	? 1 : 0;
	int	block_i		= (block == true)	? 1 : 0;
	pio_register_instruction(PIO_INST_PULL, ifempty_i, block_i, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, sideset, delay, (char *)NULL);
}
void pio_mov(int dest, int op, int src, int sideset, int delay)
{
	pio_register_instruction(PIO_INST_MOV, dest, op, src, PIO_UNUSE, PIO_UNUSE, sideset, delay, (char *)NULL);
}
void pio_irq(bool clr, bool wait, int index, bool rel, int sideset, int delay)
{
	int	clr_i	= (clr == true)		? 1 : 0;
	int	wait_i	= (wait == true)	? 1 : 0;
	int	rel_i	= (rel == true)		? 1 : 0;
	pio_register_instruction(PIO_INST_IRQ, clr_i, wait_i, index, rel_i, PIO_UNUSE, sideset, delay, (char *)NULL);
}
void pio_set(int dest, int data, int sideset, int delay)
{
	pio_register_instruction(PIO_INST_SET, dest, data, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, sideset, delay, (char *)NULL);
}
void pio_comment(char *string)
{
	pio_register_instruction(PIO_INST_COMMENT, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, string);
}
void pio_label(char *lbl)
{
	pio_register_instruction(PIO_INST_LABEL, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, lbl);
}
void pio_nop(int sideset, int delay)
{
	pio_register_instruction(PIO_INST_NOP, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, sideset, delay, (char *)NULL);
}
void pio_wrap_target(void)
{
	pio_register_instruction(PIO_INST_WRAP_TARGET, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, (char *)NULL);
}
void pio_wrap(void)
{
	pio_register_instruction(PIO_INST_WRAP, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, (char *)NULL);
}
void pio_origin(int addr)
{
	pio_register_instruction(PIO_INST_ORIGIN, addr, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, PIO_UNUSE, (char *)NULL);
}
void pio_init(bool out_gpio_bit_by_bit, bool in_gpio_bit_by_bit, bool disp_asm_stdout, bool distp_trace_stdout)
{
	PIO_OUT_GPIO_BIT_BY_BIT = out_gpio_bit_by_bit;
	PIO_IN_GPIO_BIT_BY_BIT = in_gpio_bit_by_bit;
	DISP_ASM_STDOUT = disp_asm_stdout;
	DISP_TRACE_STDOUT = distp_trace_stdout;
}